--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,11 @@
 
 
-services:
 
-# PostgreSQL Database and pgAdmin
+
+services : 
+  # =======================
+  # PostgreSQL & pgAdmin
+  # =======================
   postgres:
     image: postgres:15
     container_name: data_source_postgres
@@ -12,9 +15,10 @@ services:
       POSTGRES_DB: ${POSTGRES_DB}
     volumes:
       - ./data/pgdata:/var/lib/postgresql/data
-      - ./raw_data:/data  
+      - ./raw_data:/data
     ports:
       - "5432:5432"
+
 
   pgadmin:
     image: dpage/pgadmin4
@@ -30,7 +34,10 @@ services:
     depends_on:
       - postgres
 
-# Kafka with KRaft mode (no Zookeeper) 
+
+  # =======================
+  # Kafka (KRaft mode)
+  # =======================
   controller-1:
     image: apache/kafka:4.1.0
     container_name: controller-1
@@ -40,8 +47,10 @@ services:
       KAFKA_LISTENERS: CONTROLLER://:9093
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
-      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@controller-1:9093,2@controller-2:9093,3@controller-3:9093
+      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@controller-1:9093,2@controller-2:9093
       KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
+    volumes:
+      - ./data/kafka/controller-1/meta:/var/lib/kafka/data
 
   controller-2:
     image: apache/kafka:4.1.0
@@ -52,20 +61,10 @@ services:
       KAFKA_LISTENERS: CONTROLLER://:9093
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
-      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@controller-1:9093,2@controller-2:9093,3@controller-3:9093
+      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@controller-1:9093,2@controller-2:9093
       KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
-
-  controller-3:
-    image: apache/kafka:4.1.0
-    container_name: controller-3
-    environment:
-      KAFKA_NODE_ID: 3
-      KAFKA_PROCESS_ROLES: controller
-      KAFKA_LISTENERS: CONTROLLER://:9093
-      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-      KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
-      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@controller-1:9093,2@controller-2:9093,3@controller-3:9093
-      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
+    volumes:
+      - ./data/kafka/controller-2/meta:/var/lib/kafka/data
 
   broker-1:
     image: apache/kafka:4.1.0
@@ -73,19 +72,24 @@ services:
     ports:
       - 29092:9092
     environment:
-      KAFKA_NODE_ID: 4
+      KAFKA_NODE_ID: 3
       KAFKA_PROCESS_ROLES: broker
       KAFKA_LISTENERS: 'PLAINTEXT://:19092,PLAINTEXT_HOST://:9092'
       KAFKA_ADVERTISED_LISTENERS: 'PLAINTEXT://broker-1:19092,PLAINTEXT_HOST://localhost:29092'
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@controller-1:9093,2@controller-2:9093,3@controller-3:9093
+      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@controller-1:9093,2@controller-2:9093
       KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 2
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 2
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+      KAFKA_MIN_INSYNC_REPLICAS: 1
+    volumes:
+      - ./data/kafka/broker-1/data:/var/lib/kafka/data
     depends_on:
       - controller-1
       - controller-2
-      - controller-3
 
   broker-2:
     image: apache/kafka:4.1.0
@@ -93,36 +97,92 @@ services:
     ports:
       - 39092:9092
     environment:
-      KAFKA_NODE_ID: 5
+      KAFKA_NODE_ID: 4
       KAFKA_PROCESS_ROLES: broker
       KAFKA_LISTENERS: 'PLAINTEXT://:19092,PLAINTEXT_HOST://:9092'
       KAFKA_ADVERTISED_LISTENERS: 'PLAINTEXT://broker-2:19092,PLAINTEXT_HOST://localhost:39092'
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@controller-1:9093,2@controller-2:9093,3@controller-3:9093
+      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@controller-1:9093,2@controller-2:9093
       KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 2
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 2
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+      KAFKA_MIN_INSYNC_REPLICAS: 1
+    volumes:
+      - ./data/kafka/broker-2/data:/var/lib/kafka/data
     depends_on:
       - controller-1
       - controller-2
-      - controller-3
-
-  broker-3:
-    image: apache/kafka:4.1.0
-    container_name: broker-3
-    ports:
-      - 49092:9092
+  # =======================
+  # Apache Spark Cluster
+  # =======================
+  spark-master:
+    image: apache/spark:3.5.7
+    container_name: spark-master
     environment:
-      KAFKA_NODE_ID: 6
-      KAFKA_PROCESS_ROLES: broker
-      KAFKA_LISTENERS: 'PLAINTEXT://:19092,PLAINTEXT_HOST://:9092'
-      KAFKA_ADVERTISED_LISTENERS: 'PLAINTEXT://broker-3:19092,PLAINTEXT_HOST://localhost:49092'
-      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-      KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@controller-1:9093,2@controller-2:9093,3@controller-3:9093
-      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
+      - SPARK_MODE=master
+      - SPARK_MASTER_HOST=spark-master
+      - SPARK_MASTER_PORT=7077
+      - SPARK_MASTER_WEBUI_PORT=8081
+      - SPARK_EVENTLOG_ENABLED=true
+      - SPARK_EVENTLOG_DIR=/opt/spark/spark-events
+    ports:
+      - "7077:7077"
+      - "8081:8081"
+    command: >
+      bash -c "/opt/spark/sbin/start-master.sh && tail -f /opt/spark/logs/spark--org.apache.spark.deploy.master.*.out"
+    volumes:
+      - ./data/spark-events:/opt/spark/spark-events
+      - ./data/spark-logs:/opt/spark/logs
+
+  spark-worker-1:
+    image: apache/spark:3.5.7
+    container_name: spark-worker-1
     depends_on:
-      - controller-1
-      - controller-2
-      - controller-3
+      - spark-master
+    environment:
+      - SPARK_MODE=worker
+      - SPARK_MASTER_URL=spark://spark-master:7077
+      - SPARK_WORKER_CORES=2
+      - SPARK_WORKER_MEMORY=2G
+    ports:
+      - "8082:8081"
+    command: >
+      bash -c "/opt/spark/sbin/start-worker.sh spark://spark-master:7077 && tail -f /opt/spark/logs/spark--org.apache.spark.deploy.worker.*.out"
+    volumes:
+      - ./data/spark-events:/opt/spark/spark-events
+      - ./data/spark-logs:/opt/spark/logs
+
+  spark-worker-2:
+    image: apache/spark:3.5.7
+    container_name: spark-worker-2
+    depends_on:
+      - spark-master
+    environment:
+      - SPARK_MODE=worker
+      - SPARK_MASTER_URL=spark://spark-master:7077
+      - SPARK_WORKER_CORES=2
+      - SPARK_WORKER_MEMORY=2G
+    ports:
+      - "8083:8081"
+    command: >
+      bash -c "/opt/spark/sbin/start-worker.sh spark://spark-master:7077 && tail -f /opt/spark/logs/spark--org.apache.spark.deploy.worker.*.out"
+    volumes:
+      - ./data/spark-events:/opt/spark/spark-events
+      - ./data/spark-logs:/opt/spark/logs
+
+  spark-history:
+    image: apache/spark:3.5.7
+    container_name: spark-history
+    command: >
+      bash -c "/opt/spark/sbin/start-history-server.sh && tail -f /opt/spark/logs/spark--org.apache.spark.deploy.history.*.out"
+    environment:
+      - SPARK_HISTORY_OPTS=-Dspark.history.fs.logDirectory=/opt/spark/spark-events
+    ports:
+      - "18080:18080"
+    volumes:
+      - ./data/spark-events:/opt/spark/spark-events
+      - ./data/spark-logs:/opt/spark/logs
+
