--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -185,4 +185,43 @@ services :
     volumes:
       - ./data/spark-events:/opt/spark/spark-events
       - ./data/spark-logs:/opt/spark/logs
+  
+  # =======================
+  # MINIO Object Storage
+  # =======================
+  minio:
+    image: "quay.io/minio/minio:RELEASE.2025-03-12T18-04-18Z"
+    ports:
+      - "127.0.0.1:9900:9000"
+      - "127.0.0.1:9901:9001"
+    command: [ "server", "--console-address", ":9001", "/data" ]
+    environment:
+      MINIO_ROOT_USER: ${MINIO_ROOT_USER}
+      MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
 
+  createbuckets:
+    image: quay.io/minio/mc:RELEASE.2025-03-12T17-29-24Z
+    depends_on:
+      - minio
+    restart: on-failure
+    entrypoint: >
+      /bin/sh -c "
+      sleep 5;
+      /usr/bin/mc alias set dockerminio http://minio:9000 minioAccessKey minioSecretKey;
+      /usr/bin/mc mb dockerminio/my-bucket/some-directory;
+      /usr/bin/mc mb dockerminio/my-other-bucket;
+      exit 0;
+      "
+  # =======================
+  # Metabase
+  # =======================
+  metabase:
+    image: metabase/metabase:v0.56.10.x
+    container_name: metabase
+    restart: always
+    ports:
+      - "3000:3000"  
+    environment:
+      - MB_DB_FILE=/metabase-data/metabase.db
+    volumes:
+      - ./data/metabase-data:/metabase-data
