Bureau API and Transaction Debezium done

--- a/data_source/TransactionInsert/pg_source_config.json
+++ b/data_source/TransactionInsert/pg_source_config.json
@@ -14,7 +14,7 @@
     "publication.name": "dbz_publication",
     "publication.autocreate.mode": "filtered",
 
-    "table.include.list": "public.bki",
+    "table.include.list": "public.applications",
     "snapshot.mode": "initial",
     "incremental.snapshot.enabled": "true",
     "signal.data.collection": "debezium.signal",
