--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -172,103 +172,133 @@ services :
   # =======================
   # Apache Spark Cluster
   # =======================
-  # spark-master:
-  #   image: apache/spark:3.5.7
-  #   container_name: spark-master
-  #   environment:
-  #     - SPARK_MODE=master
-  #     - SPARK_MASTER_HOST=spark-master
-  #     - SPARK_MASTER_PORT=7077
-  #     - SPARK_MASTER_WEBUI_PORT=8081
-  #     - SPARK_EVENTLOG_ENABLED=true
-  #     - SPARK_EVENTLOG_DIR=/opt/spark/spark-events
-  #   ports:
-  #     - "7077:7077"
-  #     - "8081:8081"
-  #   command: >
-  #     bash -c "/opt/spark/sbin/start-master.sh && tail -f /opt/spark/logs/spark--org.apache.spark.deploy.master.*.out"
-  #   volumes:
-  #     - ./data/spark-events:/opt/spark/spark-events
-  #     - ./data/spark-logs:/opt/spark/logs
+  spark-master:
+    build:
+      context: ./IngestRawData
+      dockerfile: Dockerfile
+    container_name: spark-master
+    user: root
+    environment:
+      - SPARK_MODE=master
+      - SPARK_MASTER_HOST=spark-master
+      - SPARK_MASTER_PORT=7077
+      - SPARK_MASTER_WEBUI_PORT=8081
+      - SPARK_EVENTLOG_ENABLED=true
+      - SPARK_EVENTLOG_DIR=/opt/spark/spark-events
+      - IVY_HOME=/tmp/.ivy2
 
-  # spark-worker-1:
-  #   image: apache/spark:3.5.7
-  #   container_name: spark-worker-1
-  #   depends_on:
-  #     - spark-master
-  #   environment:
-  #     - SPARK_MODE=worker
-  #     - SPARK_MASTER_URL=spark://spark-master:7077
-  #     - SPARK_WORKER_CORES=2
-  #     - SPARK_WORKER_MEMORY=2G
-  #   ports:
-  #     - "8082:8081"
-  #   command: >
-  #     bash -c "/opt/spark/sbin/start-worker.sh spark://spark-master:7077 && tail -f /opt/spark/logs/spark--org.apache.spark.deploy.worker.*.out"
-  #   volumes:
-  #     - ./data/spark-events:/opt/spark/spark-events
-  #     - ./data/spark-logs:/opt/spark/logs
+    ports:
+      - "7077:7077"
+      - "8081:8081"
+    command: >
+      bash -c "/opt/spark/sbin/start-master.sh && tail -f /opt/spark/logs/spark--org.apache.spark.deploy.master.*.out"
+    volumes:
+      - ./data/spark-events:/opt/spark/spark-events
+      - ./data/spark-logs:/opt/spark/logs
+      - ./IngestRawData:/opt/spark/work-dir
+      - spark-ivy-cache:/tmp/.ivy2 
 
-  # spark-worker-2:
-  #   image: apache/spark:3.5.7
-  #   container_name: spark-worker-2
-  #   depends_on:
-  #     - spark-master
-  #   environment:
-  #     - SPARK_MODE=worker
-  #     - SPARK_MASTER_URL=spark://spark-master:7077
-  #     - SPARK_WORKER_CORES=2
-  #     - SPARK_WORKER_MEMORY=2G
-  #   ports:
-  #     - "8083:8081"
-  #   command: >
-  #     bash -c "/opt/spark/sbin/start-worker.sh spark://spark-master:7077 && tail -f /opt/spark/logs/spark--org.apache.spark.deploy.worker.*.out"
-  #   volumes:
-  #     - ./data/spark-events:/opt/spark/spark-events
-  #     - ./data/spark-logs:/opt/spark/logs
+  spark-worker-1:
+    build:
+      context: ./IngestRawData
+      dockerfile: Dockerfile
+    container_name: spark-worker-1
+    user: root
+    depends_on:
+      - spark-master
+    environment:
+      - SPARK_MODE=worker
+      - SPARK_MASTER_URL=spark://spark-master:7077
+      - SPARK_WORKER_CORES=3
+      - SPARK_WORKER_MEMORY=3G
+      - IVY_HOME=/tmp/.ivy2
+    ports:
+      - "8082:8081"
+    command: >
+      bash -c "/opt/spark/sbin/start-worker.sh spark://spark-master:7077 && tail -f /opt/spark/logs/spark--org.apache.spark.deploy.worker.*.out"
+    volumes:
+      - ./data/spark-events:/opt/spark/spark-events
+      - ./data/spark-logs:/opt/spark/logs
+      - spark-ivy-cache:/tmp/.ivy2
 
-  # spark-history:
-  #   image: apache/spark:3.5.7
-  #   container_name: spark-history
-  #   command: >
-  #     bash -c "/opt/spark/sbin/start-history-server.sh && tail -f /opt/spark/logs/spark--org.apache.spark.deploy.history.*.out"
-  #   environment:
-  #     - SPARK_HISTORY_OPTS=-Dspark.history.fs.logDirectory=/opt/spark/spark-events
-  #   ports:
-  #     - "18080:18080"
-  #   volumes:
-  #     - ./data/spark-events:/opt/spark/spark-events
-  #     - ./data/spark-logs:/opt/spark/logs
+  spark-worker-2:
+    build:
+      context: ./IngestRawData
+      dockerfile: Dockerfile
+    container_name: spark-worker-2
+    user: root
+    depends_on:
+      - spark-master
+    environment:
+      - SPARK_MODE=worker
+      - SPARK_MASTER_URL=spark://spark-master:7077
+      - SPARK_WORKER_CORES=3
+      - SPARK_WORKER_MEMORY=3G
+      - IVY_HOME=/tmp/.ivy2
+    ports:
+      - "8083:8081"
+    command: >
+      bash -c "/opt/spark/sbin/start-worker.sh spark://spark-master:7077 && tail -f /opt/spark/logs/spark--org.apache.spark.deploy.worker.*.out"
+    volumes:
+      - ./data/spark-events:/opt/spark/spark-events
+      - ./data/spark-logs:/opt/spark/logs
+      - spark-ivy-cache:/tmp/.ivy2
+
+  spark-history:
+    build:
+      context: ./IngestRawData
+      dockerfile: Dockerfile
+    container_name: spark-history
+    user: root
+    command: >
+      bash -c "/opt/spark/sbin/start-history-server.sh && tail -f /opt/spark/logs/spark--org.apache.spark.deploy.history.*.out"
+    environment:
+      - SPARK_HISTORY_OPTS=-Dspark.history.fs.logDirectory=/opt/spark/spark-events
+      - IVY_HOME=/tmp/.ivy2
+    ports:
+      - "18080:18080"
+    volumes:
+      - ./data/spark-events:/opt/spark/spark-events
+      - ./data/spark-logs:/opt/spark/logs
+      - spark-ivy-cache:/tmp/.ivy2
   
-  # # =======================
-  # # MINIO Object Storage
-  # # =======================
-  # minio:
-  #   image: "quay.io/minio/minio:RELEASE.2025-03-12T18-04-18Z"
-  #   ports:
-  #     - "127.0.0.1:9900:9000"
-  #     - "127.0.0.1:9901:9001"
-  #   command: [ "server", "--console-address", ":9001", "/data" ]
-  #   environment:
-  #     MINIO_ROOT_USER: ${MINIO_ROOT_USER}
-  #     MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
+  # =======================
+  # MINIO Object Storage
+  # =======================
+  minio:
+    image: "quay.io/minio/minio:RELEASE.2025-03-12T18-04-18Z"
+    ports:
+      - "127.0.0.1:9900:9000"
+      - "127.0.0.1:9901:9001"
+    command: [ "server", "--console-address", ":9001", "/data" ]
+    environment:
+      MINIO_ROOT_USER: ${MINIO_ROOT_USER}
+      MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
+    volumes:
+      - ./data/minio:/data
+    restart: unless-stopped
 
-  # createbuckets:
-  #   image: quay.io/minio/mc:RELEASE.2025-03-12T17-29-24Z
-  #   depends_on:
-  #     - minio
-  #   restart: on-failure
-  #   entrypoint: >
-  #     /bin/sh -c "
-  #     sleep 5;
-  #     /usr/bin/mc alias set dockerminio http://minio:9000 minioAccessKey minioSecretKey;
-  #     /usr/bin/mc mb dockerminio/my-bucket/some-directory;
-  #     /usr/bin/mc mb dockerminio/my-other-bucket;
-  #     exit 0;
-  #     "
-  # # =======================
-  # # Metabase
-  # # =======================
+  createbuckets:
+    image: quay.io/minio/mc:RELEASE.2025-03-12T17-29-24Z
+    depends_on:
+      - minio
+    restart: on-failure
+    entrypoint: >
+      /bin/sh -c "
+      echo 'Waiting for MinIO to start...';
+      sleep 10;
+      echo 'Configuring MinIO client...';
+      /usr/bin/mc alias set dockerminio http://minio:9000 minioAccessKey minioSecretKey;
+      echo 'Creating bucket...';
+      /usr/bin/mc mb --ignore-existing dockerminio/applications-bureau-data;
+      echo 'Setting bucket policy to public read...';
+      /usr/bin/mc anonymous set download dockerminio/applications-bureau-data;
+      echo 'Bucket setup complete!';
+      exit 0;
+      "
+  # =======================
+  # Metabase
+  # =======================
   # metabase:
   #   image: metabase/metabase:v0.56.10.x
   #   container_name: metabase
@@ -279,3 +309,5 @@ services :
   #     - MB_DB_FILE=/metabase-data/metabase.db
   #   volumes:
   #     - ./data/metabase-data:/metabase-data
+volumes:
+  spark-ivy-cache:
